done with step 11

--- a/form/src/app/app.component.html
+++ b/form/src/app/app.component.html
@@ -1,3 +1,5 @@
+{{ friendModel | json }}
+
 <!doctype html>
 <html lang="en">
 
@@ -14,69 +16,37 @@
 <body>
   <div class="container">
     <h1 style="text-align: center;">SlamBook</h1>
-    <form method="post">
+    <form method="post" #formName="ngForm">
 
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="street">FirstName</label>
-          <input type="text" name="firstname" id="firstname" class="form-control">
+          <input type="text" name="firstname" id="firstname" class="form-control" #firstname="ngModel" [(ngModel)]="friendModel.firstname">
         </div>
         <div class="form-group col-md-6">
           <label for="streetnumber">LastName</label>
-          <input type="text" id="lastname" name="lastname" class="form-control">
+          <input type="text" id="lastname" name="lastname" class="form-control" #lastname="ngModel" [(ngModel)]="friendModel.lastname">
         </div>
       </div>
 
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="email">E-mail:</label>
-          <input type="email" id="email" name="email" class="form-control" />
+          <input type="email" id="email" name="email" class="form-control" #email="ngModel" [(ngModel)]="friendModel.email" />
         </div>
         <div class="form-group col-md-6">
-          <label for="Phone-Number">Phone-Number</label>
-          <input type="number" id="Phone-Number" name="Phone-Number" class="form-control" />
+          <label for="PhoneNumber">Phone-Number</label>
+          <input type="number" id="PhoneNumber" name="PhoneNumber" class="form-control" #PhoneNumber="ngModel" [(ngModel)]="friendModel.phonenumber" />
         </div>
       </div>
       
       <div>
         <label for="language" style="font-size: large;">Choose Your Favourite Language  :</label>
-        <select name="language" id="language">
-          <option *ngFor="let lang of languages">{{ lang.language}}</option>
-          <!-- <option value="html">HTML</option>
-          <option value="css">CSS</option>
-          <option value="javascript">JavaScript</option>
-          <option value="php">PHP</option>
-          <option value="none">None</option> -->
+        <select name="language" id="language" #language="ngModel" [(ngModel)]="friendModel.language">
+          <option *ngFor="let lang of languages">{{lang.language}}</option>
         </select>
       </div>
-
-      <fieldset>
-        <legend>Address</legend>
-
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="street">Street:</label>
-            <input type="text" name="street" id="street" class="form-control">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="streetnumber">Street number:</label>
-            <input type="text" id="streetnumber" name="streetnumber" class="form-control">
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="city">City:</label>
-            <input type="text" id="city" name="city" class="form-control">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="zipcode">Zipcode</label>
-            <input type="text" id="zipcode" name="zipcode" class="form-control">
-          </div>
-        </div>
-      </fieldset>
-
-
-      <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
 
