--- a/form/src/app/app.component.html
+++ b/form/src/app/app.component.html
@@ -14,6 +14,7 @@
 
 <body>
   <div class="container">
+    <li *ngFor="let friend of message.message"> {{friend.firstname}}{{ friend.lastname }}{{ friend.email }}{{ friend.phonenumber}}{{ friend.language }}</li>
     <h1 style="text-align: center;">SlamBook</h1>
     <form method="post" action="app.component.html" #valform="ngForm" (ngSubmit)="onSubmit(valform)" novalidate>
 
